--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(Boost_LIBRARY_DIR /Users/adrian/Downloads/boost_1_64_0/stage/lib)
 set(Boost_USE_STATIC_LIBS        ON) # only find static libs
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
-find_package(Boost 1.64.0 COMPONENTS system thread date_time regex serialization REQUIRED)
+find_package(Boost COMPONENTS system thread date_time regex serialization REQUIRED)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
